# my-todo-app

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  todo.py
.github/workflows/: ci.yml
app/: database.py  main.py  models.py
app/routers/: todos.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
docs/: AGENT_PROMPT.md  SESSION_LOG.md  STRATEGY.md
scripts/: capture-screenshots.mjs
tests/: test_todos.py
